; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_type.c_ECPGmake_array_type.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_type.c_ECPGmake_array_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ECPGtype = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ECPGtype* }

@ECPGt_array = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ECPGtype* @ECPGmake_array_type(%struct.ECPGtype* %0, i8* %1) #0 {
  %3 = alloca %struct.ECPGtype*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ECPGtype*, align 8
  store %struct.ECPGtype* %0, %struct.ECPGtype** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @ECPGt_array, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = call %struct.ECPGtype* @ECPGmake_simple_type(i32 %6, i8* %7, i32 0)
  store %struct.ECPGtype* %8, %struct.ECPGtype** %5, align 8
  %9 = load %struct.ECPGtype*, %struct.ECPGtype** %3, align 8
  %10 = load %struct.ECPGtype*, %struct.ECPGtype** %5, align 8
  %11 = getelementptr inbounds %struct.ECPGtype, %struct.ECPGtype* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store %struct.ECPGtype* %9, %struct.ECPGtype** %12, align 8
  %13 = load %struct.ECPGtype*, %struct.ECPGtype** %5, align 8
  ret %struct.ECPGtype* %13
}

declare dso_local %struct.ECPGtype* @ECPGmake_simple_type(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
